Stopped body from overflowing and pulled in home page styling

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,5 @@
+@use "./pages/home/hero";
+@use "./pages/home/features";
 @use "./layout/header";
 
 :root {
@@ -40,6 +42,7 @@ html {
 
 body {
   background-color: var(--color-midnight-green);
+  overflow-x: hidden;
 }
 
 button,
